.Fixed homepage hero-bg clipping     -Containers needed to be set to 'd-flex'     -Changed height to 100vh (100% of viewport)

--- a/storefront/src/components/footer.css
+++ b/storefront/src/components/footer.css
@@ -1,7 +1,6 @@
 .footer {
-    display: block;
-    position: absolute;
-    height: 32em;
+    padding-top: 1em;
+    height: 8em;
     background-color: rgb(20, 20, 20);
     color: aliceblue;
 }
