--- a/storefront/src/style/home.css
+++ b/storefront/src/style/home.css
@@ -1,10 +1,10 @@
 
-.hero-bg-img {
+.hero-bg {
+    position: relative;
     background: url('../img_files/DSCF4683.jpg');
-    height: 66.5em;
-    background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
 }
 .hero-content {
     position: absolute;
@@ -14,18 +14,12 @@
     background-color:rgba(0, 0, 0, 0.85);
     border-radius: 4%/15%;
 }
-.hero-content-img {
-    border-radius: 6%/4%;
-}
 .hero2-bg {
-    position: absolute;
+    position: relative;
     background:url('../img_files/DSC02900.png');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 66.5em;
-}
-.hero2-content-img {
-    position: absolute;
+    min-height: 100vh;
 }
 .hero2-content {
     position: absolute;
